apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 5
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: apache-html
              mountPath: /usr/local/apache2/htdocs/
      volumes:
        - name: apache-html
          configMap:
            name: apache-html
